ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
    networking.gke.io/managed-certificates: "achuabhin-tech"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.allow-https: "true"
    konghq.com/strip-path: 'true'
spec:
  rules:
  - host: www.achuabhin.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mario-service 
            port:
              number: 80
